--- a/exo4.html
+++ b/exo4.html
@@ -7,22 +7,22 @@
 </head>
 <body>
     <ol>
-        <li>Je ne sais pas</li>
-        <li>Je ne sais pas</li>
-        <li>Je ne sais pas</li>
-        <li>Je ne sais pas</li>
-        <li>Je ne sais pas</li>
+        <li>Site web</li>
+        <li>Site web</li>
+        <li>Site web</li>
+        <li>Site web</li>
+        <li>Site web</li>
     </ol>
     <ul>
-        <li>Je ne sais pas</li>
-        <li>Je ne sais pas</li>
-        <li>Je ne sais pas:
+        <li>Site web</li>
+        <li>Site web</li>
+        <li>Site web:
             <ul>
-                <li>Je ne sais pas</li>
-                <li>Je ne sais pas</li>
+                <li>Site web</li>
+                <li>Site web</li>
             </ul>
         </li>
-        <li>Je ne sais pas</li>
+        <li>Site web</li>
     </ul>
     <dl>
   <dt>HTML</dt>
@@ -36,4 +36,5 @@
 </dl>
 
 </body>
+
 </html>
