--- a/exo4.html
+++ b/exo4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exo4</title>
+    <title>exercice4</title>
 </head>
 <body>
     <ol>
@@ -38,3 +38,4 @@
 </body>
 
 </html>
+
