Update list items in exo4.html

--- a/exo4.html
+++ b/exo4.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <ol>
-        <li>Site web</li>
-        <li>Site web</li>
-        <li>Site web</li>
-        <li>Site web</li>
-        <li>Site web</li>
+        <li>lala machi site web</li>
+        <li>lala machi site web</li>
+        <li>lala machi site web</li>
+        <li>lala machi site web</li>
+        <li>lala machi site web</li>
     </ol>
     <ul>
         <li>Site web</li>
@@ -38,4 +38,5 @@
 </body>
 
 </html>
+
 
